first project continue

--- a/first_project/style/style_index.css
+++ b/first_project/style/style_index.css
@@ -13,4 +13,14 @@
     text-align: center;
     border-radius: 20px;
     box-sizing: border-box;
+    padding: 20px;
 }
+
+button {
+   background: green;
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 30%;
+}
+
