--- a/first_project/style/user-details.css
+++ b/first_project/style/user-details.css
@@ -1,6 +1,4 @@
-body {
 
-}
 
 #wrap-user {
     justify-content: center;
@@ -11,8 +9,12 @@ body {
     width: 100%;
 }
 
+h1 {
+    text-align: center;
+}
+
 li {
-    text-decoration: none;
+    list-style-type: none;
 }
 
 .postBox {
