--- a/first_project/style/user-details.css
+++ b/first_project/style/user-details.css
@@ -2,7 +2,7 @@
 
 #wrap-user {
     justify-content: center;
-    border: 1px red solid;
+    border: 3px red solid;
     text-align: center;
     border-radius: 20px;
     box-sizing: border-box;
@@ -49,6 +49,11 @@ button {
     border-radius: 30%;
 }
 
+button:hover {
+    background: white;
+    color: green;
+    transition: 700ms;
+}
 
 .buttonWrap {
     margin-top: 30px;
